--- a/django_project/templates/home.html
+++ b/django_project/templates/home.html
@@ -6,4 +6,12 @@
 
 {% block content %}
     <h1>home.html</h1>
+
+    {% if user.is_authenticated %}
+        <h2>Hi, {{ user.email }}</h2>
+        <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+        <a href="{% url 'login' %}">Login</a>
+        <a href="">SignUp</a>
+    {% endif %}
 {% endblock %}
