--- a/django_project/templates/home.html
+++ b/django_project/templates/home.html
@@ -12,6 +12,8 @@
         <a href="{% url 'logout' %}">Logout</a>
     {% else %}
         <a href="{% url 'login' %}">Login</a>
-        <a href="">SignUp</a>
+        <a href="{% url 'signup' %}">SignUp</a>
     {% endif %}
+
+    <a href="{% url 'password_reset' %}">reset password</a>
 {% endblock %}
