1. relocating reset password template. 2.add redirecting feature into login and signup view. it redirecting the   authenticated user to the home page.

--- a/django_project/templates/home.html
+++ b/django_project/templates/home.html
@@ -15,5 +15,5 @@
         <a href="{% url 'signup' %}">SignUp</a>
     {% endif %}
 
-    <a href="{% url 'password_reset' %}">reset password</a>
+    <a href="{% url 'reset_password' %}">reset password</a>
 {% endblock %}
