--- a/django_project/accounts/templates/authentication/login.html
+++ b/django_project/accounts/templates/authentication/login.html
@@ -9,7 +9,10 @@
 
     <form action="" method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        {% for field in form %}
+            {{ field.label_tag }}
+            {{ field }}
+        {% endfor %}
         <button type="submit">Login</button>
     </form>
 {% endblock %}
