--- a/django_project/templates/base.html
+++ b/django_project/templates/base.html
@@ -4,22 +4,20 @@
 
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        {% block title %}
-            Base.html
-        {% endblock %}
-    </title>
-    <link rel="stylesheet" href="{% static 'global_css/try.css' %}">
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="{% static 'accounts/images/1.png' %}" type="image/x-icon" />
+        <title>RS IKN - Medika Nusantara</title>
 
-<body>
-    <main>
+        {% block extrahead %} {% endblock %}
+    </head>
+
+    <body>
         {% block content %}
-        
+
         {% endblock %}
-    </main>
-</body>
+    </body>
+
 </html>
