--- a/django_project/accounts/templates/authentication/password_reset_confirm.html
+++ b/django_project/accounts/templates/authentication/password_reset_confirm.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %}
-    Enter new Password
+{% load static %}
+
+{% block extrahead %}
+    <link rel="stylesheet" href="{% static 'accounts/styles/login_register.css' %}">
 {% endblock %}
 
 {% block content %}
