--- a/django_project/accounts/templates/authentication/password_reset_form.html
+++ b/django_project/accounts/templates/authentication/password_reset_form.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %}
-    Forgot Your Password
+{% load static %}
+
+{% block extrahead %}
+    <link rel="stylesheet" href="{% static 'accounts/styles/login_register.css' %}">
 {% endblock %}
 
 {% block content %}
