--- a/django_project/templates/base.html
+++ b/django_project/templates/base.html
@@ -11,6 +11,13 @@
         <link rel="shortcut icon" href="{% static 'accounts/images/1.png' %}" type="image/x-icon" />
         <title>RS IKN - Medika Nusantara</title>
 
+        <!-- add font from google font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&family=Noto+Sans+JP:wght@300;400&family=Poppins:wght@200;400;600&display=swap"
+            rel="stylesheet">
+
         {% block extrahead %} {% endblock %}
     </head>
 
