add error message and the style

--- a/django_project/accounts/static/accounts/styles/login_register.css
+++ b/django_project/accounts/static/accounts/styles/login_register.css
@@ -150,7 +150,11 @@ header {
     object-fit: cover;
 }
 
-
+.error-message {
+    display: flex;
+    color: rgb(163, 35, 35);
+    font-size: 14px;
+}
 
 
 /* End styling section login */
