--- a/src/styles/fotnav-res.css
+++ b/src/styles/fotnav-res.css
@@ -1,3 +1,24 @@
+:root {
+    --primary: #335846;
+    --secondary: #DEB887;
+    --buttton: #00BCFF;
+    --textlight: #FDFDFD;
+    --textdrak: #0F172A;
+
+    --font-weight-heading: 700;
+    --font-weight-body: 400;
+
+    --font-size-h1: 3rem;
+    --font-size-h2: 2.25rem;
+    --font-size-h3: 1.875rem;
+    --font-size-h4: 1.5rem;
+    --font-size-h5: 1.25rem;
+
+    --font-size-body1: 1.25rem;
+    --font-size-body2: 1rem;
+    --font-size-body3: 0.875rem;
+    --font-size-body4: 0.75rem;
+}
 @media screen and (max-width: 1024px){
     /* navbar */
     .container {
@@ -14,7 +35,35 @@
 }
 @media screen and (max-width: 768px){
     /* navbar */
+   
     
+    .wrapp-nav{
+        flex-wrap: wrap;
+        position: absolute;
+        width: 100%;
+        /* background: var(--primary); */
+    }
+    .navigation{
+        flex-direction: column;
+        position: absolute;
+        top: 66px;
+        left: 0;
+        /* right: 0; */
+        padding-inline: 50px;
+        width: 100%;
+        height: 0;
+        transition: .5s;
+        overflow: hidden;
+        background: var(--secondary);
+        opacity: 0;
+        justify-content: center;
+    }
+    .hidden{
+        height: 250px;
+        opacity: 1;
+    }
+
+    /* end Navbar  */
     .search{
         display: none;
     }
@@ -33,6 +82,21 @@
     }
 }
 @media screen and (max-width: 425px){
+    /* navbar */
+    .container{
+        padding-inline: 20px;
+    }
+    .emergency-call p{
+        display: none;
+    
+    }
+    .logo h4{
+        font-size: var(--font-size-h5);
+    }
+    .navigation{
+        padding-inline: 20px;
+    }
+    /* footer */
     .footer-row, .copy-right{
         padding-inline: 30px;
     }
