add logo company

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -21,7 +21,7 @@
         <div class="footer-row">
             <section class="footer-col logo">
                 <div>
-                    <img src="/asset/1.png" alt="Hospital Logo">
+                    <img src="/Assets/logo company.png" alt="Hospital Logo">
                 </div>
                 <h3>Medika Nusantara</h3>
                 <p>Kawasan Inti Pusat Pemerintahan Ibu Kota Negara, Kecamatan Sepaku, Penajam Paser Utara, Kalimantan Timur</p>
