--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -18,7 +18,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&family=Noto+Sans+JP:wght@300;400&family=Poppins:wght@200;400;600&display=swap"
         rel="stylesheet">
-    <link rel="icon" href="/asset/1.png" />
+    <link rel="icon" href="/Assets/logo company.png" />
 </head>
 
 <body>
@@ -26,7 +26,7 @@
     <header>
         <div class="head container">
             <div class="logo">
-                <img src="/asset/1.png" alt="logo">
+                <img src="/Assets/logo company.png" alt="logo">
                 <h4>Medika Nusantara</h4>
             </div>
             <div class="search" id="search-nav">
