--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -82,7 +82,15 @@ footer {
 .logo h3 {
     font-size: var(--font-size-h3);
 }
-
+.logo div{
+    width: 100px;
+    height:100px
+}
+.logo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .footer-col>p {
     max-width: 300px;
     text-align: justify;
@@ -90,8 +98,9 @@ footer {
 }
 
 .footer-col>div img {
-    width: 215px;
-    height: 140px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /* END Styling section logo */
