navbar responsive finish ready to use

--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -29,7 +29,7 @@
                 <img src="/Assets/logo company.png" alt="logo">
                 <h4>Medika Nusantara</h4>
             </div>
-            <div class="search" id="search-nav">
+            <div class="search">
                 <form>
                     <div class="input-container">
                         <i class="icon-search fas fa-search"></i>
@@ -63,8 +63,17 @@
             <li><a href="#">Specialties</a></li>
             <li><a href="#">Service</a></li>
             <li><a href="#">Information</a></li>
-            <li class="disable-login"><a class="color-login" href="#">Login/Register</a></li>
+            <a class="disable-login">Login/Register</a>
         </ul>
+        <div class="search" id="search-nav">
+            <form>
+                <div class="input-container">
+                    <i class="icon-search fas fa-search"></i>
+                    <input type="text" class="input-text" placeholder="Cari Dokter, Layanan, atau Informasi">
+                    <button id="search">Search</button>
+                </div>
+            </form>
+        </div>
         <div class="login-register">
             <a href="#">Login/Register</a>
         </div>
