change 425px responsive

--- a/src/styles/fotnav-res.css
+++ b/src/styles/fotnav-res.css
@@ -91,6 +91,9 @@
 }
 @media screen and (max-width: 425px){
     /* navbar */
+    .language p{
+        display: none;
+    }
     .container{
         padding-inline: 20px;
     }
