change position on display 768 class .wrapp-nav = relative

--- a/src/styles/fotnav-res.css
+++ b/src/styles/fotnav-res.css
@@ -47,7 +47,7 @@
     
     .wrapp-nav{
         flex-wrap: wrap;
-        position: absolute;
+        position: relative;
         width: 100%;
         /* background: var(--primary); */
     }
