--- a/src/styles/fotnav-res.css
+++ b/src/styles/fotnav-res.css
@@ -48,6 +48,7 @@
     .wrapp-nav{
         flex-wrap: wrap;
         position: relative;
+        /* position: absolute; */
         width: 100%;
         /* background: var(--primary); */
     }
