--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -19,7 +19,7 @@
     <!-- Footer Structure -->
     <footer>
         <div class="footer-row">
-            <section class="footer-col logo">
+            <section class="footer-col logo-footer">
                 <div>
                     <img src="/Assets/logo company.png" alt="Hospital Logo">
                 </div>
