--- a/Public/responsive.css
+++ b/Public/responsive.css
@@ -5,4 +5,20 @@
     .about .container-about{
         width: 100%;
     }
+    .news{
+        flex-wrap: wrap;
+    }
+    .card{
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    }
+}
+
+@media screen and (max-width: 425px){
+    .news{
+        justify-content: center;
+    }
+    .logo-footer{
+        width: 100%;
+        justify-content: center;
+    }
 }
