--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -32,7 +32,7 @@ body {
 
 /* styling section footer */
 footer {
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
 }
@@ -82,11 +82,11 @@ footer {
 .logo h3 {
     font-size: var(--font-size-h3);
 }
-.logo div{
-    width: 100px;
-    height:100px
+.logo-footer div{
+    width: 80px;
+    height:80px
 }
-.logo{
+.logo-footer{
     display: flex;
     flex-direction: column;
     align-items: center;
