--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -57,7 +57,7 @@
         <div class="hamburger" id="hamburger-menu">
             <i class="fa-solid fa-bars" id="hamburgericon" style="color: #0F172A;"></i>
         </div>
-        <ul class="navigation hidden" id="menu-list">
+        <ul class="navigation" id="menu-list">
             <li><a href="#" class="active">Porch</a></li>
             <li><a href="#">Appointments</a></li>
             <li><a href="#">Specialties</a></li>
@@ -69,7 +69,7 @@
             <form>
                 <div class="input-container">
                     <i class="icon-search fas fa-search"></i>
-                    <input type="text" class="input-text" placeholder="Cari Dokter, Layanan, atau Informasi">
+                    <input type="text" class="input-text" placeholder="Search service information">
                     <button id="search">Search</button>
                 </div>
             </form>
