--- a/Public/style.css
+++ b/Public/style.css
@@ -37,14 +37,14 @@ body {
     font-family: 'Poppins', sans-serif;
     background: #f1eeee;
 }
-.hero-img{
-    position: static;
-    /* position: relative; */
-}
+
 .hero{
     width: 100%;
-    height: 550px;
-    background: var(--textdrak);
+    height: 600px;
+    background-image: url("/Assets/receptionist.jpg");
+    background-position: center;
+    background-size: cover;
+
 }
 
 .hero-card{
