navbar position on top oke

--- a/src/styles/fotnav-res.css
+++ b/src/styles/fotnav-res.css
@@ -65,7 +65,7 @@
         opacity: 0;
         justify-content: center;
     }
-    .hidden{
+    .navigation.active{
         height: 300px;
         opacity: 1;
     }
