--- a/Public/style.css
+++ b/Public/style.css
@@ -13,6 +13,7 @@
     --container: #eeeaea;
     --textlight: #FDFDFD;
     --textdrak: #0F172A;
+    --bgbody: #f1eeee;
 
     --font-weight-heading: 700;
     --font-weight-body: 400;
@@ -35,7 +36,7 @@
 }
 body {
     font-family: 'Poppins', sans-serif;
-    background: #f1eeee;
+    background: var(--bgbody);
 }
 
 .hero{
