--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -10,6 +10,7 @@
     --buttton: #00BCFF;
     --textlight: #FDFDFD;
     --textdrak: #0F172A;
+    --bgbody: #f1eeee;
 
     --font-weight-heading: 700;
     --font-weight-body: 400;
@@ -28,7 +29,6 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background: #dfe1e2;
 }
 
 .container {
@@ -36,6 +36,12 @@ body {
     padding-block: 20px;
 }
 
+header, nav {
+    width: 100%;
+    position: sticky;
+    top: 0;
+    background: var(--bgbody);
+}
 
 .head {
     background-color: var(--primary);
