--- a/Public/style.css
+++ b/Public/style.css
@@ -9,7 +9,7 @@
     --secondary: #DEB887;
     --secondary-hover: rgb(233, 194, 142);
     --buttton: #0799ce;
-    --buttton-hover: #00729b;
+    --buttton-hover: #0db1ec;
     --container: #eeeaea;
     --textlight: #FDFDFD;
     --textdrak: #0F172A;
@@ -42,11 +42,43 @@ body {
 .hero{
     width: 100%;
     height: 600px;
-    background-image: url("/Assets/receptionist.jpg");
-    background-position: center;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/Assets/hero.jpg");
+    /* background-position: ; */
     background-size: cover;
-
+    /* display: flex;
+    align-items: center; */
 }
+.caption-hero{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    color: var(--textlight);
+    justify-content: center;
+}
+.caption-hero h3{
+    font-size: var(--font-size-h3);
+    margin-bottom: 5px;
+}
+.caption-hero p{
+    text-align: justify;
+    margin-bottom: 10px;
+}
+.caption-hero div button{
+    padding-inline: 30px;
+    padding-block:10px;
+    /* width: 50%; */
+    border-radius: 5px;
+    border: none;
+    color: var(--textlight);
+    background: var(--buttton);
+    font-weight: var(--font-weight-heading);
+    transition: background .5s ease-in;
+}
+.caption-hero button:hover{
+    background: var(--buttton-hover);
+}
+
 
 .hero-card{
     display: flex;
@@ -65,7 +97,7 @@ body {
     background: var(--secondary);
     border-radius: 5px;
     padding: 20px;
-    position: relative;
+    /* position: relative; */
     transition: background 0.5 ease-in;
 }
 .wrapp:hover{
@@ -76,7 +108,7 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    position: relative;
+    /* position: relative; */
     width: 100%;
 }
 .img-card h5{
@@ -175,6 +207,8 @@ body {
     transition: transform 0.3s ease;
 }
 .card{
+    position: relative;
+    z-index: 1; 
     width: 300px;
     height: auto;
     background-color: var(--container);
