--- a/django_project/static_collection/accounts/styles/login_register.css
+++ b/django_project/static_collection/accounts/styles/login_register.css
@@ -103,11 +103,11 @@ header {
     width: 100%;
     padding-block: 5px;
     padding-left: 10px;
-    border-color: #fff;
+    border-color: transparent;
     border-radius: 5px;
     margin-top: 5px;
-    /* background: none; */
-    /* border-bottom: 2px solid #000000; */
+    outline: none;
+
 }
 
 
