--- a/django_project/templates/home.html
+++ b/django_project/templates/home.html
@@ -1,19 +1,310 @@
 {% extends 'base.html' %}
+{% load static %}
 
-{% block title %}
-    HOME
+{% block extrahead %}
+<!-- get icon  -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<!-- style website using CSS -->
+<link rel="stylesheet" href="{% static 'styles/home/navbar.css' %}"> <!--Navbar-->
+<link rel="stylesheet" href="{% static 'styles/home/footer.css' %}">
+<link rel="stylesheet" href="{% static 'styles/home/fotnav-res.css' %}"> <!--Responsive navbar and %%-->
+<link rel="stylesheet" href="{% static 'styles/home/Public/style.css' %}"> <!-- Prorch css-->
+<link rel="stylesheet" href="{% static 'styles/home/Public/responsive.css' %}">
+
+<!-- Chat fitur -->
+<script type="text/javascript">window.$crisp = []; window.CRISP_WEBSITE_ID = "7f046342-22e4-45ab-9e88-0f2d65ee9b51"; (function () { d = document; s = d.createElement("script"); s.src = "https://client.crisp.chat/l.js"; s.async = 1; d.getElementsByTagName("head")[0].appendChild(s); })();
+</script>
+
+<!-- Animation on scroll -->
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 {% endblock %}
 
 {% block content %}
-    <h1>home.html</h1>
 
-    {% if user.is_authenticated %}
-        <h2>Hi, {{ user.email }}</h2>
-        <a href="{% url 'logout' %}">Logout</a>
-    {% else %}
-        <a href="{% url 'login' %}">Login</a>
-        <a href="{% url 'signup' %}">SignUp</a>
-    {% endif %}
+<!-- header Structure -->
+<header data-aos="fade-down" data-aos-duration="500" data-aos-easing="linear">
+    <div class="head container">
+        <div class="logo">
+            <img src="{% static 'img/home/logo_company.png' %}" alt="logo">
+            <h4>Medika Nusantara</h4>
+        </div>
+        <div class="search">
+            <form>
+                <div class="input-container">
+                    <i class="icon-search fas fa-search"></i>
+                    <input type="text" class="input-text" placeholder="Search service information">
+                    <button id="search">Search</button>
+                </div>
+            </form>
+        </div>
+        <div class="menu">
+            <div class="emergency-call">
+                <i class="fa-solid fa-phone"></i>
+                <p>Emergency Call</p>
+            </div>
+            <div class="language">
+                <i class="fa-solid fa-globe"></i>
+                <p>ID</p>
+            </div>
+        </div>
+    </div>
+    <!--structure navigation bar -->
+    <nav class="wrapp-nav container">
+        <div class="hamburger" id="hamburger-menu">
+            <i class="fa-solid fa-bars" id="hamburgericon" style="color: #0F172A;"></i>
+        </div>
+        <ul class="navigation hidden" id="menu-list">
+            <li><a href="#" class="active">Porch</a></li>
+            <li><a href="#">Appointments</a></li>
+            <li><a href="#">Specialties</a></li>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Information</a></li>
+            <a class="disable-login">Login/Register</a>
+        </ul>
+        <div class="search" id="search-nav">
+            <form>
+                <div class="input-container">
+                    <i class="icon-search fas fa-search"></i>
+                    <input type="text" class="input-text" placeholder="Cari Dokter, Layanan, atau Informasi">
+                    <button id="search">Search</button>
+                </div>
+            </form>
+        </div>
+        <div class="login-register">
+            <a href="{% url 'login' %}">Login</a>
+        </div>
+    </nav>
+    <!-- End structure navigation bar  -->
+</header>
+<!-- End header Structure -->
 
-    <a href="{% url 'reset_password' %}">reset password</a>
+<!-- Section hero image -->
+<section class="hero" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url({% static 'img/home/hero.jpg'%})">
+    <div class="caption-hero container" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine"
+        data-aos-easing="ease-in-sine">
+        <h3>Take Care of Your Healthy Now</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque quos pariatur molestias. Doloremque,
+            harum perspiciatis unde blanditiis quas aut sed quibusdam tenetur, eligendi, incidunt iure consequatur rerum
+        </p>
+        <div>
+            <button>Get Appointment</button>
+        </div>
+    </div>
+</section>
+<!-- END Section hero image -->
+
+<!-- section card -->
+<section class="hero-card container">
+    <div class="wrapp" data-aos="fade-up-right" data-aos-duration="1000">
+        <figure class="img-card">
+            <img src="{% static 'img/home/chat.png' %}" alt="logo emergency-call">
+            <h5>Consultation</h5>
+        </figure>
+        <div class="caption-card">
+            <p>Consultation by doctors can be through online or offline</p>
+            <a href="#">Registration</a>
+        </div>
+    </div>
+    <div class="wrapp" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="100">
+        <figure class="img-card">
+            <img src="{% static 'img/home/emergency call.png' %}" alt="logo emergency-call">
+            <h5>Emergency Call</h5>
+        </figure>
+        <div class="caption-card">
+            <p>Consultation by doctors can be through online or offline</p>
+            <a href="#">Contact Us</a>
+        </div>
+    </div>
+    <div class="wrapp" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="200">
+        <figure class="img-card">
+            <img src="{% static 'img/home/doctor.png' %}" alt="logo emergency-call">
+            <h5>Our Doctor</h5>
+        </figure>
+        <div class="caption-card">
+            <p>Find a Qualified Doctor for Your Health Needs</p>
+            <a href="#">Find</a>
+        </div>
+    </div>
+</section>
+<!-- end section card -->
+
+
+<!-- section about -->
+<section class="about container">
+    <div class="container-about" data-aos="fade-right" data-aos-duration="1000">
+        <img src="{% static 'img/home/hospital fasilities.jpg' %}" alt="Hospital Facilities">
+    </div>
+    <div class="container-about" data-aos="fade-left" data-aos-duration="1000">
+        <article>
+            <h4>About</h4>
+            <h2>The Complete Medical Facilities for you</h2>
+            <p>Our hospital, with top-notch medical facilities, offers leading-edge care that includes modern
+                treatment rooms, a 24-hour emergency department, and intensive care facilities supported by the
+                latest technology. Our leading medical team and state-of-the-art diagnostic facilities ensure
+                precise diagnosis and effective treatment.</p>
+            <a href="#">See More</a>
+        </article>
+    </div>
+</section>
+<!-- END section about -->
+
+<section class="container">
+    <h5>Article From Medika Nusantara</h5>
+    <div class="news" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1000">
+        <article class="card">
+            <div class="img-container">
+                <img src="{% static 'img/home/health.jpg' %}" alt="health picture">
+            </div>
+            <div class="content">
+                <div class="date">
+                    <time>25 November 2023</time>
+                </div>
+                <h3>Cara mengurangi Resiko Terkena Serangan Jantung</h3>
+                <div>
+                    <p>
+                        Mengurangi risiko serangan jantung, perhatikan diet sehat, berolahraga rutin, kelola stres,
+                        dan hindari merokok.
+                    </p>
+                </div>
+                <div class="read-more">
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+        </article>
+
+        <article class="card">
+            <div class="img-container">
+                <img src="{% static 'img/home/health.jpg' %}" alt="health picture">
+            </div>
+            <div class="content">
+                <div class="date">
+                    <time>25 November 2023</time>
+                </div>
+                <h3>Cara mengurangi Resiko Terkena Serangan Jantung</h3>
+                <div>
+                    <p>
+                        Mengurangi risiko serangan jantung, perhatikan diet sehat, berolahraga rutin, kelola stres,
+                        dan hindari merokok.
+                    </p>
+                </div>
+                <div class="read-more">
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+        </article>
+
+        <article class="card">
+            <div class="img-container">
+                <img src="{% static 'img/home/health.jpg' %}" alt="health picture">
+            </div>
+            <div class="content">
+                <div class="date">
+                    <time>25 November 2023</time>
+                </div>
+                <h3>Cara mengurangi Resiko Terkena Serangan Jantung</h3>
+                <div>
+                    <p>
+                        Mengurangi risiko serangan jantung, perhatikan diet sehat, berolahraga rutin, kelola stres,
+                        dan hindari merokok.
+                    </p>
+                </div>
+                <div class="read-more">
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+        </article>
+
+        <article class="card">
+            <div class="img-container">
+                <img src="{% static 'img/home/health.jpg' %}" alt="health picture">
+            </div>
+            <div class="content">
+                <div class="date">
+                    <time>25 November 2023</time>
+                </div>
+                <h3>Cara mengurangi Resiko Terkena Serangan Jantung</h3>
+                <div>
+                    <p>
+                        Mengurangi risiko serangan jantung, perhatikan diet sehat, berolahraga rutin, kelola stres,
+                        dan hindari merokok.
+                    </p>
+                </div>
+                <div class="read-more">
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+        </article>
+    </div>
+
+</section>
+
+<!-- Footer Structure -->
+<footer>
+    <div class="footer-row">
+        <section class="footer-col logo-footer" data-aos="fade-right" data-aos-offset="300"
+            data-aos-easing="ease-in-sine" data-aos-duration="500">
+            <div>
+                <img src="{% static 'img/home/logo_company.jpg' %}" alt="Hospital Logo">
+            </div>
+            <h3>Medika Nusantara</h3>
+            <p>Kawasan Inti Pusat Pemerintahan Ibu Kota Negara, Kecamatan Sepaku, Penajam Paser Utara, Kalimantan
+                Timur</p>
+        </section>
+
+        <section class="footer-col" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine"
+            data-aos-duration="500">
+            <h4>About Us</h4>
+            <ul>
+                <li> <a href="#">History</a></li>
+                <li><a href="#">Overview</a></li>
+                <li><a href="#">Investor Relations</a></li>
+                <li><a href="#">Education and Training</a></li>
+                <li><a href="#">Our Management</a></li>
+            </ul>
+        </section>
+
+        <section class="footer-col" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine"
+            data-aos-duration="500">
+            <h4>Coporate</h4>
+            <ul>
+                <li><a href="#">Buat Janji Temu</a></li>
+                <li><a href="#">Cari Dokter</a></li>
+                <li><a href="#">Cari Lokasi</a></li>
+                <li><a href="#">Karir</a></li>
+            </ul>
+        </section>
+
+        <section class="footer-col respon-news" data-aos="fade-left" data-aos-offset="300"
+            data-aos-easing="ease-in-sine" data-aos-duration="500">
+            <h4>Newsletter</h4>
+            <p>Subscribe to our newsletter for news, updates, helpful tips and exclusive offers.</p>
+            <form action="#">
+                <input type="text" placeholder="Your email" required>
+                <button id="subscribe" type="submit">SUBSCRIBE</button>
+            </form>
+            <div class="sosial-media">
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="#"><i class="fa-solid fa-envelope"></i></a>
+            </div>
+        </section>
+    </div>
+    <div class="copy-right">
+        <p>Copyright &copy; 2023 Medika Nusantara. All rights reserved.</p>
+        <div class="privacy">
+            <a href="#">Privacy Policy</a>
+            <a href="#">Help & Support</a>
+        </div>
+    </div>
+</footer>
+
+<script src="{% static 'js/home/menu.js' %}"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>AOS.init();</script>
+
 {% endblock %}
