--- a/django_project/templates/home.html
+++ b/django_project/templates/home.html
@@ -75,7 +75,11 @@
             </form>
         </div>
         <div class="login-register">
-            <a href="{% url 'login' %}">Login</a>
+            {% if user.is_authenticated %}
+                <a href="#">{{ user.full_name }}</a>
+            {% else %}
+                <a href="{% url 'login' %}">Login</a>
+            {% endif %}
         </div>
     </nav>
     <!-- End structure navigation bar  -->
@@ -243,65 +247,7 @@
 </section>
 
 <!-- Footer Structure -->
-<footer>
-    <div class="footer-row">
-        <section class="footer-col logo-footer" data-aos="fade-right" data-aos-offset="300"
-            data-aos-easing="ease-in-sine" data-aos-duration="500">
-            <div>
-                <img src="{% static 'img/home/logo_company.jpg' %}" alt="Hospital Logo">
-            </div>
-            <h3>Medika Nusantara</h3>
-            <p>Kawasan Inti Pusat Pemerintahan Ibu Kota Negara, Kecamatan Sepaku, Penajam Paser Utara, Kalimantan
-                Timur</p>
-        </section>
-
-        <section class="footer-col" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine"
-            data-aos-duration="500">
-            <h4>About Us</h4>
-            <ul>
-                <li> <a href="#">History</a></li>
-                <li><a href="#">Overview</a></li>
-                <li><a href="#">Investor Relations</a></li>
-                <li><a href="#">Education and Training</a></li>
-                <li><a href="#">Our Management</a></li>
-            </ul>
-        </section>
-
-        <section class="footer-col" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine"
-            data-aos-duration="500">
-            <h4>Coporate</h4>
-            <ul>
-                <li><a href="#">Buat Janji Temu</a></li>
-                <li><a href="#">Cari Dokter</a></li>
-                <li><a href="#">Cari Lokasi</a></li>
-                <li><a href="#">Karir</a></li>
-            </ul>
-        </section>
-
-        <section class="footer-col respon-news" data-aos="fade-left" data-aos-offset="300"
-            data-aos-easing="ease-in-sine" data-aos-duration="500">
-            <h4>Newsletter</h4>
-            <p>Subscribe to our newsletter for news, updates, helpful tips and exclusive offers.</p>
-            <form action="#">
-                <input type="text" placeholder="Your email" required>
-                <button id="subscribe" type="submit">SUBSCRIBE</button>
-            </form>
-            <div class="sosial-media">
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-tiktok"></i></a>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                <a href="#"><i class="fa-solid fa-envelope"></i></a>
-            </div>
-        </section>
-    </div>
-    <div class="copy-right">
-        <p>Copyright &copy; 2023 Medika Nusantara. All rights reserved.</p>
-        <div class="privacy">
-            <a href="#">Privacy Policy</a>
-            <a href="#">Help & Support</a>
-        </div>
-    </div>
-</footer>
+{% include 'footer.html' %}
 
 <script src="{% static 'js/home/menu.js' %}"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
