--- a/django_project/accounts/templates/authentication/login_register.html
+++ b/django_project/accounts/templates/authentication/login_register.html
@@ -8,6 +8,13 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<link rel="stylesheet" href="{% static 'styles/home/footer.css' %}">
+<link rel="stylesheet" href="{% static 'styles/home/fotnav-res.css' %}"> <!--Responsive navbar and %%-->
+<link rel="stylesheet" href="{% static 'styles/home/Public/style.css' %}"> <!-- Prorch css-->
+<link rel="stylesheet" href="{% static 'styles/home/Public/responsive.css' %}">
+
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 {% endblock %}
 
 {% block content %}
@@ -131,5 +138,7 @@
 
 <script src="{% static 'accounts/js/login_register.js' %}"></script>
 
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>AOS.init();</script>
 
 {% endblock %}
