--- a/style.css
+++ b/style.css
@@ -42,18 +42,31 @@ body {
 .hero{
     width: 100%;
     height: 600px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/Assets/hero.jpg");
-    /* background-position: ; */
-    background-size: cover;
-    /* display: flex;
-    align-items: center; */
+    position: relative;
 }
+.hero-img-container{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.hero .hero-img-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center top;
+}
+
 .caption-hero{
+    position: absolute;
+    z-index: 1;
     width: 50%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    color: var(--textlight);
+    color: var(--textdrak);
     justify-content: center;
 }
 .caption-hero h3{
