--- a/style.css
+++ b/style.css
@@ -49,9 +49,9 @@ head{
     /* width: 100%; */
     height: 550px;
     /* display: flex; */
+    background: var(--textdrak);
     height: 600px;
     position: relative;
-
 }
 .hero-img-container{
     position: absolute;
@@ -59,6 +59,15 @@ head{
     left: 0;
     width: 100%;
     height: 100%;
+}
+.hero-img-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
 }
 
 .hero .hero-img-container img {
@@ -70,12 +79,12 @@ head{
 
 .caption-hero{
     position: absolute;
-    z-index: 1;
+    /* z-index: 1; */
     width: 50%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    color: var(--textdrak);
+    color: var(--textlight);
     justify-content: center;
 }
 .caption-hero h3{
