--- a/src/styles/specialist.css
+++ b/src/styles/specialist.css
@@ -46,7 +46,7 @@
 }
 
 
-.our-specialist h4, .doctor-tooth h4 {
+.our-specialist h4, .doctor h4 {
     text-align: center;
     margin-bottom: 20px;
     font-size: var(--font-size-h4);
